# Milestone-4---Travel-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  start.py  vercel.json
docs/: architecture.md  demo.md  edgecases.md  eval.md  implementation-plan.md  problemstatement.md
scripts/: start.sh
src/travel_agent/: __init__.py  config.py  main.py
src/travel_agent/agents/: accommodation.py  base.py  budget.py  destination_research.py  itinerary_composer.py  normalize.py  request_parser.py  stubs.py  transport.py  utils.py  validator.py  validator_checks.py
src/travel_agent/llm/: base.py  gemini_client.py  groq_client.py  preflight.py  rate_limiter.py
src/travel_agent/orchestrator/: export.py  pipeline.py  renderer.py  runner.py  safety.py  state.py
src/travel_agent/prompts/: accommodation.txt  budget.txt  destination_research.txt  itinerary_composer.txt  loader.py  request_parser.txt  transport.txt  validator.txt
stitch/: README.md
stitch/stitch_voyage_ai_voice_first_planner/: DESIGN.md
tests/: fixtures.py  test_eval_checklist.py  test_llm_clients.py  test_llm_json.py  test_phase0.py  test_phase1_agents.py  test_phase2_pipeline.py  test_phase3_renderer.py  test_phase4_fixtures.py  test_rate_limiter.py  test_repo_hygiene.py  test_request_parser.py  test_safety.py  test_state.py  test_validator.py  test_web_api.py
tests/fixtures/: evidence_manifest.json  japan_request.txt  live_fix_in_state.json  live_fix_jp_state.json  sample_japan.json
web/static/: index.html  vercel.json
(+7 files in other folders)
